removed gpb.c, added gih.c
2000-12-18  Michael Natterer  <mitch@gimp.org>

	* po-plug-ins/POTFILES.in: removed gpb.c, added gih.c


Former-commit-id: 36c685884d226bdc641c7cc8710fd718524e0e35

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-18  Michael Natterer  <mitch@gimp.org>
+
+	* po-plug-ins/POTFILES.in: removed gpb.c, added gih.c
+
 2000-12-18  Sven Neumann  <sven@gimp.org>
 	    Jens Lautenbacher <jtl@gimp.org>
 
