gpb plug-in is gone, new gih plug-in added
--Sven


Former-commit-id: 7463a2a3cdb0e91fab636ae01e253dedc27780e3

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-18  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: gbr plug-in is gone, new gih plug-in added
+
 2000-12-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian translation.
