--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-18  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+
 2000-12-18  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: gbr plug-in is gone, new gih plug-in added
