Added bugfix from David Neary to fix #9156.
Former-commit-id: fcc29b05dcbf8b14916bba195d77d24e2384b75f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-12-18  Daniel Egger <egger@suse.de>
+
+	* plug-ins/ifcompose/ifscompose.c:
+	Added patch from David Neary to fix calulations. 
+	Fixes bug #9156.
+
 2000-12-18  Sven Neumann  <sven@gimp.org>
 	    Jens Lautenbacher <jtl@gimp.org>
 
