--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-12-18  Jens Lautenbacher  <jtl@gimp.org>
+	    Sven Neumann <sven@gimp.org>
+ 	
+	* plug-ins/script-fu/scripts/select_to_brush.scm: make it work
+	with the new brush format and the new saving code. It loads and
+	saves RGB selections into pixmap brushes now.
+
 2000-12-18  Daniel Egger <egger@suse.de>
 
 	* plug-ins/ifcompose/ifscompose.c:
