--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-18  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated german translation.
+
 2000-12-15  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Updated russian translation.
