alter the pixpipe parameters and attach them as parasite, so saving a
2000-12-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gih.c: alter the pixpipe parameters and attach them
	as parasite, so saving a loaded .gih file yields the same brush again
	(minus the brush spacing which is not yet stored in the image).


Former-commit-id: 6deb78e9b6fcf971d8f0c084fc377261c8da2d32

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-12-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/gih.c: alter the pixpipe parameters and attach them
+	as parasite, so saving a loaded .gih file yields the same brush again
+	(minus the brush spacing which is not yet stored in the image).
+	
 2000-12-18  Sven Neumann  <sven@gimp.org>
 	    Jens Lautenbacher <jtl@gimp.org>
 
