--- a/help/ChangeLog
+++ b/help/ChangeLog
@@ -1,6 +1,7 @@
 2000-12-19  Michael Natterer  <mitch@gimp.org>
 
 	* yes-i-patched-them-all-again ... Pre 1.2 Version 4
+	With some proofreading from Count <count@flatline.de>
 
 2000-12-17  Michael Natterer  <mitch@gimp.org>
 
