--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-19  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/pat.c: Load broken (GRAYA and RGBA) patterns
+	but tell the user that they are broken. Cleanup.
+
 2000-12-19  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/gih.c: alter the pixpipe parameters and attach them
