--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-19  Sven Neumann  <sven@gimp.org>
+            Michael Natterer  <mitch@gimp.org>
+
+	* TODO: reviewed
+
 2000-12-19  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/pat.c: Load broken (GRAYA and RGBA) patterns
