set the spacing and other info from the first brush just as the old code
2000-12-19  Sven Neumann  <sven@gimp.org>

	* app/gimpbrushpipe.c (gimp_brush_pipe_load): set the spacing and
	other info from the first brush just as the old code used to do.


Former-commit-id: d75c6435e03fde82853b43fa0a376144313a5f68

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2000-12-19  Sven Neumann  <sven@gimp.org>
+
+	* app/gimpbrushpipe.c (gimp_brush_pipe_load): set the spacing and
+	other info from the first brush just as the old code used to do.
+
+2000-12-19  Sven Neumann  <sven@gimp.org>
             Michael Natterer  <mitch@gimp.org>
 
 	* TODO: reviewed
