--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-19  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated german translation.
+
 2000-12-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian translation.
