--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2000-12-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/Makefile.am
+	* app/gimphistogramP.h: removed.
+
+	* app/gimphistogram.[ch]
+	* app/histogramwidget.[ch]: Histogram cleanup: replaced the
+	channel #define's by a properly named enum and use this enum
+	type as parameter in functions instead of "int".
+
+	* app/curves.c
+	* app/histogram_tool.c
+	* app/levels.c: changed accordingly.
+
 2000-12-19  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/exchange.c: applied (a modified version of)
