--- a/po-script-fu/cs.po
+++ b/po-script-fu/cs.po
@@ -1,12 +1,12 @@
-# Czech translation of GIMP script-fu 1.1.29.
+# Czech translation of GIMP script-fu 1.1.30.
 # Copyright (C) 2000 Free Software Foundation, Inc.
 # Stanislav Brabec <utx@k332.feld.cvut.cz>, 2000.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gimp-script-fu 1.1.29\n"
-"POT-Creation-Date: 2000-12-09 11:20-0800\n"
-"PO-Revision-Date: 2000-11-22 19:08+01:00\n"
+"Project-Id-Version: gimp-script-fu 1.1.30\n"
+"POT-Creation-Date: 2000-12-18 11:30+0100\n"
+"PO-Revision-Date: 2000-12-18 13:13+01:00\n"
 "Last-Translator: Stanislav Brabec <utx@k332.feld.cvut.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1196,6 +1196,14 @@ msgid "Erase before Draw"
 msgstr "Smazat pøed kreslením"
 
 #: plug-ins/script-fu/scripts/erase-rows.scm:0
+msgid "Erase"
+msgstr "Smazat"
+
+#: plug-ins/script-fu/scripts/erase-rows.scm:0
+msgid "Erase/Fill"
+msgstr "Smazat/Vyplnit"
+
+#: plug-ins/script-fu/scripts/erase-rows.scm:0
 msgid "Even"
 msgstr "Sudé"
 
@@ -1247,6 +1255,10 @@ msgstr "Vyplnit pozadí vzorkem"
 #: plug-ins/gap/sel-to-anim-img.scm:0
 msgid "Fill with BG Color"
 msgstr "Vyplnit barvou pozadí"
+
+#: plug-ins/script-fu/scripts/erase-rows.scm:0
+msgid "Fill with BG"
+msgstr "Vyplnit pozadím"
 
 #: plug-ins/script-fu/scripts/alien-glow-arrow.scm:0
 #: plug-ins/script-fu/scripts/alien-glow-bar.scm:0
