--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-19  Stanislav Brabec  <utx@penguin.cz>
+
+	* cs.po: Updated translation.
+
 2000-12-19  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
