--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/gradient.c: couldn't resist to heavily indent all function
+	prototypes before starting to fix the rename-bug. Nothing changed.
+
 2000-12-19  Stanislav Brabec  <utx@penguin.cz>
 
 	* plug-ins/gap/gap_lib.c: Typo fixes.
