--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-20  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: removed spheredesigner.c
+	Found by Robert L Krawitz <rlk@alum.mit.edu>
+
 2000-12-19  Stanislav Brabec  <utx@penguin.cz>
 
 	* cs.po: Updated translation.
