--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-20  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated german translation.
+
 2000-12-20  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILES.in: removed spheredesigner.c
